Bug 97876 - zeroconf: Fix a memory leak in discovery
Summary: zeroconf: Fix a memory leak in discovery
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-20 18:00 UTC by Philip Withnall
Modified: 2016-09-21 09:27 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
zeroconf: Fix a memory leak in discovery (1.24 KB, patch)
2016-09-20 18:00 UTC, Philip Withnall
Details | Splinter Review

Description Philip Withnall 2016-09-20 18:00:27 UTC
Trivial patch attached. Spotted by Coverity.
Comment 1 Philip Withnall 2016-09-20 18:00:28 UTC
Created attachment 126669 [details] [review]
zeroconf: Fix a memory leak in discovery

Coverity CID: #1358700
Comment 2 Tanu Kaskinen 2016-09-21 09:27:14 UTC
Thanks! Applied.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.