zeroconf-discover: fix a memory leak

Coverity CID: #1358700

https://bugs.freedesktop.org/show_bug.cgi?id=97876